test/libsolidity/syntaxTests/nameAndTypeResolution/293_function_is_not_a_valid_typename.sol
contract test {
    function foo() public {
    }

    function f() public {
        foo g;
    }
}
// ----
// TypeError: (85-88): Name has to refer to a struct, enum or contract.
